Write Post model docs for POST/PUT/DELET
